v3/crates/metadata-resolve/tests/failing/model_permissions/unknown_argument_preset/resolve_error.snap
---
source: crates/metadata-resolve/tests/metadata_golden_tests.rs
expression: string
input_file: crates/metadata-resolve/tests/failing/model_permissions/unknown_argument_preset/metadata.json
---
Error: Error in model permission for model 'Albums (in subgraph subgraphs)' for role 'user': a preset argument 'unknown_argument' has been set for the model 'Albums (in subgraph subgraphs)' but no such argument exists for this model
    ╭─[ <unknown>:7:9 ]
    │
  7 │ ╭─▶         {
    ┆ ┆   
 53 │ ├─▶         },
    │ │                
    │ ╰──────────────── Arguments are defined on this model
    │ 
 65 │                           "argument": "unknown_argument",
    │                                       ─────────┬────────  
    │                                                ╰────────── This argument preset references an argument that does not exist
────╯
